plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.5'
    id 'io.spring.dependency-management' version '1.1.3'
}

group = 'pagether'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.mysql:mysql-connector-j'
    implementation 'mysql:mysql-connector-java:8.0.25'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'


    implementation 'org.springframework.boot:spring-boot-starter-security'

//    implementation "javax.annotation:javax.annotation-api:1.3.1"
    implementation 'org.springframework.boot:spring-boot-starter-websocket'


    // security
    implementation 'org.springframework.boot:spring-boot-starter-security'
    testImplementation 'org.springframework.security:spring-security-test'
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'

    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    //swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'

    // 카카오톡 추가
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    // 레디스 추가
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // solapi
    implementation 'net.nurigo:sdk:4.2.7'

//    implementation 'org.json:json:20230918'
    implementation 'org.apache.httpcomponents:httpclient:4.5.14'
}

tasks.named('test') {
    useJUnitPlatform()
}

jar{
    enabled = false
}